@@ -1,0 +1,6 @@
+
+sub mod_perl::hooks { qw() }
+
+1;
+
+__END__
