@@ -8,6 +8,10 @@ Changes - Apache mod_perl change logfile
 
 =item 1.13_01-dev
 
+remove mod_perl.pm_version file.  move Makefile.PL-time generated code
+from mod_perl.pm to mod_perl_hooks.pm.PL so CPAN.pm can 
+'install mod_perl' again 
+
 added Apache::Util module (enable with PERL_UTIL_API=1 or EVERYTHING=1)
 
 only break out of the write loop if rwrite() returns -1 and
